Fix dialog on mobiles.

--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -175,7 +175,6 @@ form textarea.form-control {
     }
 
     .modal-content {
-        height: 100%;
         border-radius: 0;
     }
 
